k8s/upload-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: upload-web
  template:
    metadata:
      labels:
        app: upload-web
    spec:
      containers:
        - name: upload-web
          image: ghcr.io/bijitakc/secure-upload-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
