k8s/upload-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload-web
  labels:
    app: upload-web
spec:
  type: ClusterIP
  selector:
    app: upload-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
